--- a/lib/ft_printf/get_next_line/Makefile
+++ b/lib/ft_printf/get_next_line/Makefile
@@ -6,7 +6,7 @@
 #    By: aaleixo- <aaleixo-@student.42lisboa.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/09 14:05:34 by aaleixo-          #+#    #+#              #
-#    Updated: 2025/03/09 14:09:48 by aaleixo-         ###   ########.fr        #
+#    Updated: 2025/03/09 17:00:17 by aaleixo-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,9 +17,7 @@ SRCS = get_next_line.c get_next_line_utils.c
 OBJS = $(SRCS:.c=.o)
 
 $(NAME): $(OBJS)
-	make -C ../ft_printf/libft
-	make bonus -C  ../ft_printf/libft
-	ar rsc $(NAME) $(OBJS)  libft/*.o
+	ar rsc $(NAME) $(OBJS)
 
 all: $(NAME)
 
@@ -28,10 +26,8 @@ all: $(NAME)
 
 clean:
 	@rm -f $(OBJS)
-	make clean -C ../ft_printf/libft
 
 fclean: clean
 	@rm -f $(NAME)
-	make fclean -C ../ft_printf/libft
 
 re: fclean all
